Bild Nummerierung hinzugefügt, image margin top

--- a/index.html
+++ b/index.html
@@ -463,14 +463,14 @@
                         <div class="content">
                             <div class="column">
                                 <span>
-                                    Aus der Funktionsanalyse lässt sich ein abstraktes Systemabbild ableiten. Der
+                                    Aus der Funktionsanalyse lässt sich ein abstraktes Systemabbild (Abb. 1) ableiten. Der
                                     Energiefluss der Stromversorgung ist offen, da er in Abhängigkeit von der
                                     gewählten Komponente terminiert.
                                 </span>
                                 <div class="image-container">
                                     <img src="wwwroot/images/Systemabbild - Abstrakt.jpg">
                                     <span class="image-description">
-                                        Systemabbild der Funktionen
+                                        [Abb.1] Systemabbild der Funktionen
                                     </span>
                                 </div>
                             </div>
@@ -582,12 +582,12 @@
                             <div class="column">
                                 <span>
                                     Aus der Komponentenwahl und dem abstrakten Systemabbild lässt sich ein konkretes
-                                    Systemabbild bilden.
+                                    Systemabbild (Abb. 2)  bilden.
                                 </span>
                                 <div class="image-container">
                                     <img src="wwwroot/images/Systemabbild - Konkret.jpg">
                                     <span class="image-description">
-                                        Systemabbild der Komponenten
+                                        [Abb.2] Systemabbild der Komponenten
                                     </span>
                                 </div>
                             </div>
@@ -607,7 +607,8 @@
                             Wissenchaft
                         </div>
                         <div class="content">
-                            Aufgrund der Tatsache, dass Zweiradverleihsysteme für den Außenbetrieb konzipiert und umkgesetzt sind, 
+                            Aufgrund der Tatsache, dass Zweiradverleihsysteme für den Außenbetrieb konzipiert und
+                            umgesetzt sind, besteht eine starke Wetter- und damit Jahreszeitenabhängigkeit.
                         </div>
                     </div>
                     <div class="topic">
@@ -615,7 +616,7 @@
                             Medien
                         </div>
                         <div class="content">
-                            
+
                         </div>
                     </div>
                     <div class="topic">
@@ -623,7 +624,7 @@
                             Autoren
                         </div>
                         <div class="content">
-                            
+
                         </div>
                     </div>
                 </div>
