Wissenschaftliche Kritik fertig

--- a/index.html
+++ b/index.html
@@ -463,7 +463,8 @@
                         <div class="content">
                             <div class="column">
                                 <span>
-                                    Aus der Funktionsanalyse lässt sich ein abstraktes Systemabbild (Abb. 1) ableiten. Der
+                                    Aus der Funktionsanalyse lässt sich ein abstraktes Systemabbild (Abb. 1) ableiten.
+                                    Der
                                     Energiefluss der Stromversorgung ist offen, da er in Abhängigkeit von der
                                     gewählten Komponente terminiert.
                                 </span>
@@ -582,7 +583,7 @@
                             <div class="column">
                                 <span>
                                     Aus der Komponentenwahl und dem abstrakten Systemabbild lässt sich ein konkretes
-                                    Systemabbild (Abb. 2)  bilden.
+                                    Systemabbild (Abb. 2) bilden.
                                 </span>
                                 <div class="image-container">
                                     <img src="wwwroot/images/Systemabbild - Konkret.jpg">
@@ -604,11 +605,19 @@
                 <div class="column">
                     <div class="topic">
                         <div class="title">
-                            Wissenchaft
+                            Wissenschaft
                         </div>
                         <div class="content">
-                            Aufgrund der Tatsache, dass Zweiradverleihsysteme für den Außenbetrieb konzipiert und
-                            umgesetzt sind, besteht eine starke Wetter- und damit Jahreszeitenabhängigkeit.
+                            <span>
+                                Aufgrund der Tatsache, dass Zweiradverleihsysteme für den Außenbetrieb konzipiert und
+                                umgesetzt sind, besteht eine starke Wetter- und damit Jahreszeitenabhängigkeit. Die
+                                Nutzung ist nur halbjährlich sinnvoll <a class="source-reference"
+                                    href="index#sources"><sup>[7.1]</sup></a> Einige Systeme weisen eine nachteilhafte
+                                Abhängigkeit von Infratsruktur auf <a class="source-reference"
+                                    href="index#sources"><sup>[7.2]</sup></a>. Bemängelt werden auch die Nutzungskosten
+                                bei Anwendung von GSM-Modulen; diese werfen für den Gebrauch des Mobilfunknetzes Kosten
+                                auf. Die Nutzung von GPS und GSM mindert allerdings den benötigten Verwaltungsaufwand <a
+                                    class="source-reference" href="index#sources"><sup>[7.3]</sup></a>. </span>
                         </div>
                     </div>
                     <div class="topic">
