Medienmeinung fertig, Autorenmeinung hinzugefügt

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                         <div class="content">
                             <div class="column">
                                 <span>
-                                    Aus der Funktionsanalyse lässt sich ein abstraktes Systemabbild (Abb. 1) ableiten.
+                                    Aus der Funktionsanalyse lässt sich ein abstraktes Systemabbild (Abb1) ableiten.
                                     Der
                                     Energiefluss der Stromversorgung ist offen, da er in Abhängigkeit von der
                                     gewählten Komponente terminiert.
@@ -471,7 +471,7 @@
                                 <div class="image-container">
                                     <img src="wwwroot/images/Systemabbild - Abstrakt.jpg">
                                     <span class="image-description">
-                                        [Abb.1] Systemabbild der Funktionen
+                                        [Abb1] Systemabbild der Funktionen
                                     </span>
                                 </div>
                             </div>
@@ -583,12 +583,12 @@
                             <div class="column">
                                 <span>
                                     Aus der Komponentenwahl und dem abstrakten Systemabbild lässt sich ein konkretes
-                                    Systemabbild (Abb. 2) bilden.
+                                    Systemabbild (Abb2) bilden.
                                 </span>
                                 <div class="image-container">
                                     <img src="wwwroot/images/Systemabbild - Konkret.jpg">
                                     <span class="image-description">
-                                        [Abb.2] Systemabbild der Komponenten
+                                        [Abb2] Systemabbild der Komponenten
                                     </span>
                                 </div>
                             </div>
@@ -625,7 +625,18 @@
                             Medien
                         </div>
                         <div class="content">
-
+                            <span>
+                                Einige Quellen bemängeln, dass geliehene Zweiräder nicht ordentlich abgestellt würden.
+                                Ansammlungen solcher Räder behindern den Straßen- und Bürgersteigverkehr <a
+                                    class="source-reference" href="index#sources"><sup>[8]</sup></a>. Auch soll laut
+                                einer zitierten Studie die Verfügbarkeit von elektrischen Rollern das Autonutzverhalten
+                                nicht erheblich beeinflussen <a class="source-reference"
+                                    href="index#sources"><sup>[8]</sup></a>. Die zitierte Studie konnte allerdings nicht
+                                nachvollzogen werden. Das Handelsblatt kritisiert das Zweiradverleihsystem der Deutschen
+                                bahn, nachdem dieses ohne transparente Ankündigung aus dem "freefloating"-Betrieb in
+                                einen stationsbasierten übergegangen war <a class="source-reference"
+                                href="index#sources"><sup>[9]</sup></a>.
+                            </span>
                         </div>
                     </div>
                     <div class="topic">
@@ -633,7 +644,32 @@
                             Autoren
                         </div>
                         <div class="content">
+                            <div class="column">
+                                <div class="topic">
+                                    <div class="title">
+                                        Florian Martins
+                                    </div>
+                                    <div class="content">
 
+                                    </div>
+                                </div>
+                                <div class="topic">
+                                    <div class="title">
+                                        Ulrich Schuppe
+                                    </div>
+                                    <div class="content">
+                                        
+                                    </div>
+                                </div>
+                                <div class="topic">
+                                    <div class="title">
+                                        Paul Brätz
+                                    </div>
+                                    <div class="content">
+                                        
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
