Autoren Annotationen hinzugefügt

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </title>
     <meta charset="utf8" />
     <base href="https://paulbraetz.github.io/Zweiradverleihsysteme/">
-    <link rel="stylesheet" type="text/css" href="wwwroot/css/site.css?v=1" />
+    <link rel="stylesheet" type="text/css" href="wwwroot/css/site.css?v=2" />
     <link rel="icon" type="image/x-icon" href="wwwroot/favicon.ico?v=1" />
 </head>
 
@@ -215,18 +215,25 @@
                 Einleitung
             </summary>
             <div class="content">
-                <span>
-                    Im Rahmen des Moduls Telematiksysteme der Semestergruppe T21 wird in diesem Dokument eine
-                    Systemanalyse von Zweiradverleihsystemen aufgestellt. Das Ziel des Systems muss definiert werden, um
-                    eine feste Aufstellung von Anforderungen zu ermöglichen. Anhand dieser Anforderungen lassen sich die
-                    Funktionen identifizieren, die für den Betrieb des Systems vonnöten sind. Die Summe der Funktionen
-                    und ihrer Interaktionen sowie Material- Informations- und Energieflüsse werden als Systemabbild
-                    dargestellt. Implementiert werden diese Funktionen durch Komponenten, die in das
-                    Systemabbild eingesetzt werden. Das Systemabbild stellt eine konkret realisierbare Umsetzung eines
-                    Zweiradverleihsystems dar. Eine Bewertung von
-                    Zweiradverleihsystemen durch wissenschaftliche, wirtschaftliche und mediale Quellen
-                    sowie die persönliche Meinung der Autoren wird in der Umsetzungskritik dargestellt.
-                </span>
+                <div class="column">
+                    <span class="author-annotation">Paul Brätz</span>
+                    <span>
+                        Im Rahmen des Moduls Telematiksysteme der Semestergruppe T21 wird in diesem Dokument eine
+                        Systemanalyse von Zweiradverleihsystemen aufgestellt. Das Ziel des Systems muss definiert
+                        werden, um
+                        eine feste Aufstellung von Anforderungen zu ermöglichen. Anhand dieser Anforderungen lassen sich
+                        die
+                        Funktionen identifizieren, die für den Betrieb des Systems vonnöten sind. Die Summe der
+                        Funktionen
+                        und ihrer Interaktionen sowie Material- Informations- und Energieflüsse werden als Systemabbild
+                        dargestellt. Implementiert werden diese Funktionen durch Komponenten, die in das
+                        Systemabbild eingesetzt werden. Das Systemabbild stellt eine konkret realisierbare Umsetzung
+                        eines
+                        Zweiradverleihsystems dar. Eine Bewertung von
+                        Zweiradverleihsystemen durch wissenschaftliche, wirtschaftliche und mediale Quellen
+                        sowie die persönliche Meinung der Autoren wird in der Umsetzungskritik dargestellt.
+                    </span>
+                </div>
             </div>
         </details>
         <details id="zieldefinition" class="topic" open="">
@@ -235,6 +242,7 @@
             </summary>
             <div class="content">
                 <div class="column">
+                    <span class="author-annotation">Paul Brätz</span>
                     <span>
                         Zweiradverleihsysteme sind Systeme, die es einem Nutzer oder Kunden erlauben, ein Zweirad zu
                         leihen. Neben dieser grundlegenden Eigenschaft eines Zweiradverleihsystems ist die Definition
@@ -332,6 +340,7 @@
             </summary>
             <div class="content">
                 <div class="column">
+                    <span class="author-annotation">Paul Brätz</span>
                     <span>
                         Aus der Zieldefinition lassen sich Funktionen ableiten, die für den Betrieb des Systems vonnöten
                         sind.
@@ -471,7 +480,7 @@
                                 <div class="image-container">
                                     <img src="wwwroot/images/Systemabbild - Abstrakt.jpg">
                                     <span class="image-description">
-                                        [Abb1] Systemabbild der Funktionen
+                                        [Abb1] Systemabbild der Funktionen <span class="image-creator-annotation">Paul Brätz</span>
                                     </span>
                                 </div>
                             </div>
@@ -486,6 +495,7 @@
             </summary>
             <div class="content">
                 <div class="column">
+                    <span class="author-annotation">Ulrich Schuppe</span>
                     <span>
                         Jede Funktion muss durch eine Komponente realisiert werden. Die Wahl der Komponente muss sowohl
                         der Zieldefinition als auch der zu realisierenden Funktion entsprechen.
@@ -588,7 +598,7 @@
                                 <div class="image-container">
                                     <img src="wwwroot/images/Systemabbild - Konkret.jpg">
                                     <span class="image-description">
-                                        [Abb2] Systemabbild der Komponenten
+                                        [Abb2] Systemabbild der Komponenten <span class="image-creator-annotation">Paul Brätz</span>
                                     </span>
                                 </div>
                             </div>
@@ -603,6 +613,10 @@
             </summary>
             <div class="content">
                 <div class="column">
+                    <span class="author-annotation">Florian Martins</span>
+                    <span>
+                        Quellen aus der Wissenschaft, die Medien sowie die Autoren selbst präsentieren verschiedene Kritiken zu und Perspektiven auf Fahrradverleihsysteme.
+                    </span>
                     <div class="topic">
                         <div class="title">
                             Wissenschaft
@@ -635,7 +649,7 @@
                                 nachvollzogen werden. Das Handelsblatt kritisiert das Zweiradverleihsystem der Deutschen
                                 bahn, nachdem dieses ohne transparente Ankündigung aus dem "freefloating"-Betrieb in
                                 einen stationsbasierten übergegangen war <a class="source-reference"
-                                href="index#sources"><sup>[9]</sup></a>.
+                                    href="index#sources"><sup>[9]</sup></a>.
                             </span>
                         </div>
                     </div>
@@ -650,7 +664,12 @@
                                         Florian Martins
                                     </div>
                                     <div class="content">
+                                        <div class="column">
+                                            <span class="author-annotation">Florian Martins</span>
+                                            <span>
 
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="topic">
@@ -658,7 +677,12 @@
                                         Ulrich Schuppe
                                     </div>
                                     <div class="content">
-                                        
+                                        <div class="column">
+                                            <span class="author-annotation">Ulrich Schuppe</span>
+                                            <span>
+
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="topic">
@@ -666,7 +690,12 @@
                                         Paul Brätz
                                     </div>
                                     <div class="content">
-                                        
+                                        <div class="column">
+                                            <span class="author-annotation">Paul Brätz</span>
+                                            <span>
+
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -675,10 +704,10 @@
                 </div>
             </div>
         </details>
-        <details id="quellenverzeichnis" class="topic" open="">
-            <summary class="title">
+        <div id="quellenverzeichnis" class="topic">
+            <div class="title">
                 Quellenverzeichnis
-            </summary>
+            </div>
             <div class="content">
                 <ol class="sources" id="sources">
                     <li>
@@ -738,7 +767,7 @@
                     </li>
                 </ol>
             </div>
-        </details>
+        </div>
     </article>
 </body>
 
