--- a/index.html
+++ b/index.html
@@ -505,9 +505,11 @@
                             Ortung
                         </div>
                         <div class="content">
-                            Die Ortung der Zweiräder findet im optimalen Fall durch ein eingebautes GNSS Empfänger statt.
+                            Die Ortung der Zweiräder findet im optimalen Fall durch ein eingebautes GNSS Empfänger
+                            statt.
                             Dadurch ist eine konstantere Ortung als bei GPS möglich, weil bei GNSS mehr Satelliten
-                            berücksichtigt werden. Trotz dessen sind GPS-Module unter den Zweiradverleihsystemen weit verbreitet.
+                            berücksichtigt werden. Trotz dessen sind GPS-Module unter den Zweiradverleihsystemen weit
+                            verbreitet.
                             <span>
                                 Die Ortung von Zweirädern kann durch ein GPS-Modul erreicht werden. Zweiräde der Firma
                                 Nextbike nutzen ein solches Modul<a class="source-reference"
@@ -521,13 +523,19 @@
                             Abrechnung
                         </div>
                         <div class="content">
-                            Bei der Abrechnung stehen zwei Optionen zur Berechnung der Nutzungskostn zur Verfügung. Die erste
-                            Option wäre die Abrechnung nach gefahrener Strecke. Dabei würde das Zweirad während der Fahrt konstant
-                            geortet werden und je größer die zurückgelegte Strecke, desto mehr müsste der Kunde zahlen. Das Hauptproblem 
-                            dabei sind die endgangenen Einnahmen, wenn ein Zweirad in einer großen Zeitspanne nur eine kleine Strecke zurücklegt.
-                            Diese Zweirad kann in dieser Zeit von keinem anderen Kunden verwendet werden, bring aber nur minimale Einnahmen.
-                            Die bevorzugte Methode der Abrechnung ist deshalb die Abrechnung nach der Verwendungsdauer des Zweirad.
-                            
+                            Bei der Abrechnung stehen zwei Optionen zur Berechnung der Nutzungskostn zur Verfügung. Die
+                            erste
+                            Option wäre die Abrechnung nach gefahrener Strecke. Dabei würde das Zweirad während der
+                            Fahrt konstant
+                            geortet werden und je größer die zurückgelegte Strecke, desto mehr müsste der Kunde zahlen.
+                            Das Hauptproblem
+                            dabei sind die endgangenen Einnahmen, wenn ein Zweirad in einer großen Zeitspanne nur eine
+                            kleine Strecke zurücklegt.
+                            Diese Zweirad kann in dieser Zeit von keinem anderen Kunden verwendet werden, bring aber nur
+                            minimale Einnahmen.
+                            Die bevorzugte Methode der Abrechnung ist deshalb die Abrechnung nach der Verwendungsdauer
+                            des Zweirad.
+
                         </div>
                     </div>
                     <div class="topic" id="komponente-wartung">
@@ -535,7 +543,8 @@
                             Wartung
                         </div>
                         <div class="content">
-                            Die Prüfung auf Schäden und Fehler an Zweirädern lässt sich durch Wartungspersonal an festen Sammel- und Abgabestellen
+                            Die Prüfung auf Schäden und Fehler an Zweirädern lässt sich durch Wartungspersonal an festen
+                            Sammel- und Abgabestellen
                             durchführen. Je nach schwere der Schäden können die Zweiräader
                         </div>
                     </div>
@@ -634,7 +643,17 @@
                             Wissenchaft
                         </div>
                         <div class="content">
-                            Aufgrund der Tatsache, dass Zweiradverleihsysteme für den Außenbetrieb konzipiert und umkgesetzt sind, 
+                            <span>
+                                Aufgrund der Tatsache, dass Zweiradverleihsysteme für den Außenbetrieb konzipiert und
+                                umgesetzt sind, besteht eine starke Wetter- und damit Jahreszeitenabhängigkeit. Die
+                                Nutzung ist nur halbjährlich sinnvoll <a class="source-reference"
+                                    href="index#sources"><sup>[7.1]</sup></a>. Einige Systeme weisen eine nachteilhafte
+                                Abhängigkeit von Infratsruktur auf <a class="source-reference"
+                                    href="index#sources"><sup>[7.2]</sup></a>. Bemängelt werden auch die Nutzungskosten
+                                bei Anwendung von GSM-Modulen; diese werfen für den Gebrauch des Mobilfunknetzes Kosten
+                                auf. Die Nutzung von GPS und GSM mindert allerdings den benötigten Verwaltungsaufwand <a
+                                    class="source-reference" href="index#sources"><sup>[7.3]</sup></a>.
+                            </span>
                         </div>
                     </div>
                     <div class="topic">
