--- a/index.html
+++ b/index.html
@@ -536,7 +536,10 @@
                         </div>
                         <div class="content">
                             Die Prüfung auf Schäden und Fehler an Zweirädern lässt sich durch Wartungspersonal an festen Sammel- und Abgabestellen
-                            durchführen. Je nach schwere der Schäden können die Zweiräader
+                            durchführen. Je nach schwere der Schäden können die Zweiräder dann vor Ort oder in einer Werkstadt wieder instand gesetzt werden.
+                            Bei Zweirädern, welche in einem Gebiet verteilt sind, ist die jeweilige Firma auf die Meldung von Schäden durch Kunden oder 
+                            durch Warnungen durch die Sensorik des Zweirades angewiesen. Jene Zweiräder werden dann mithilfe eines Transporters eingesammelt
+                            und in die Werkstatt befördert.
                         </div>
                     </div>
                     <div class="topic" id="komponente-interface">
@@ -544,7 +547,9 @@
                             Benutzeroberfläche
                         </div>
                         <div class="content">
-
+                            Als Möglichkeiten der Interaktion des Kundens mit dem System, Firma, Zweirad werden eine App für das Mobiltelefon als auch eine Webseite
+                            zur Verfügung gestellt. Jene bieten eine Verbindung zum Kundensupport, Informationen über für den Kunden relevante Details, wie Kosten, 
+                            Zweiräderstandorte, Anschrift der Firma und Zugang zu den FAQ Seiten.
                         </div>
                     </div>
                     <div class="topic" id="komponente-statuserhebung">
@@ -552,7 +557,7 @@
                             Statuserhebung
                         </div>
                         <div class="content">
-
+                            
                         </div>
                     </div>
                     <div class="topic" id="komponente-stromversorgung">
