Komponente Ortung repariert

--- a/index.html
+++ b/index.html
@@ -505,13 +505,12 @@
                             Ortung
                         </div>
                         <div class="content">
-                            Die Ortung der Zweiräder findet im optimalen Fall durch ein eingebautes GNSS Empfänger
-                            statt.
-                            Dadurch ist eine konstantere Ortung als bei GPS möglich, weil bei GNSS mehr Satelliten
-                            berücksichtigt werden. Trotz dessen sind GPS-Module unter den Zweiradverleihsystemen weit
-                            verbreitet.
                             <span>
-                                Die Ortung von Zweirädern kann durch ein GPS-Modul erreicht werden. Zweiräde der Firma
+                                Die Ortung der Zweiräder findet im optimalen Fall durch ein eingebautes GNSS Empfänger
+                                statt. Dadurch ist eine konstantere Ortung als bei GPS möglich, weil bei GNSS mehr
+                                Satelliten berücksichtigt werden. Trotz dessen sind GPS-Module unter den
+                                Zweiradverleihsystemen weit verbreitet.
+                                Die Ortung von Zweirädern kann durch ein GPS-Modul erreicht werden. Zweiräder der Firma
                                 Nextbike nutzen ein solches Modul<a class="source-reference"
                                     href="index#sources"><sup>[1]</sup></a>. Um technisch unabhängiger
                                 zu werden, wird dieses Konzept allerdings ein generisches GNSS Modul nutzen.
@@ -543,10 +542,14 @@
                             Wartung
                         </div>
                         <div class="content">
-                            Die Prüfung auf Schäden und Fehler an Zweirädern lässt sich durch Wartungspersonal an festen Sammel- und Abgabestellen
-                            durchführen. Je nach schwere der Schäden können die Zweiräder dann vor Ort oder in einer Werkstadt wieder instand gesetzt werden.
-                            Bei Zweirädern, welche in einem Gebiet verteilt sind, ist die jeweilige Firma auf die Meldung von Schäden durch Kunden oder 
-                            durch Warnungen durch die Sensorik des Zweirades angewiesen. Jene Zweiräder werden dann mithilfe eines Transporters eingesammelt
+                            Die Prüfung auf Schäden und Fehler an Zweirädern lässt sich durch Wartungspersonal an festen
+                            Sammel- und Abgabestellen
+                            durchführen. Je nach schwere der Schäden können die Zweiräder dann vor Ort oder in einer
+                            Werkstadt wieder instand gesetzt werden.
+                            Bei Zweirädern, welche in einem Gebiet verteilt sind, ist die jeweilige Firma auf die
+                            Meldung von Schäden durch Kunden oder
+                            durch Warnungen durch die Sensorik des Zweirades angewiesen. Jene Zweiräder werden dann
+                            mithilfe eines Transporters eingesammelt
                             und in die Werkstatt befördert.
                         </div>
                     </div>
@@ -555,8 +558,10 @@
                             Benutzeroberfläche
                         </div>
                         <div class="content">
-                            Als Möglichkeiten der Interaktion des Kundens mit dem System, Firma, Zweirad werden eine App für das Mobiltelefon als auch eine Webseite
-                            zur Verfügung gestellt. Jene bieten eine Verbindung zum Kundensupport, Informationen über für den Kunden relevante Details, wie Kosten, 
+                            Als Möglichkeiten der Interaktion des Kundens mit dem System, Firma, Zweirad werden eine App
+                            für das Mobiltelefon als auch eine Webseite
+                            zur Verfügung gestellt. Jene bieten eine Verbindung zum Kundensupport, Informationen über
+                            für den Kunden relevante Details, wie Kosten,
                             Zweiräderstandorte, Anschrift der Firma und Zugang zu den FAQ Seiten.
                         </div>
                     </div>
@@ -565,7 +570,7 @@
                             Statuserhebung
                         </div>
                         <div class="content">
-                            
+
                         </div>
                     </div>
                     <div class="topic" id="komponente-stromversorgung">
