--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                             Statuserhebung
                         </div>
                         <div class="content">
-                            
+                            Die Erhebung aller relevanter Informationen für den Betreiber und den Kunden 
                         </div>
                     </div>
                     <div class="topic" id="komponente-stromversorgung">
