--- a/index.html
+++ b/index.html
@@ -642,14 +642,14 @@
             </summary>
             <div class="content">
                 <div class="column">
-                    <span class="author-annotation">Paul Brätz</span>
+                    <span class="author-annotation">Florian Martins</span>
                     <span>
                         Quellen aus der Wissenschaft, die Medien sowie die Autoren selbst präsentieren verschiedene
                         Kritiken zu und Perspektiven auf Fahrradverleihsysteme.
                     </span>
                     <div class="topic">
                         <div class="title">
-                            Wissenchaft
+                            Wissenschaft
                         </div>
                         <div class="content">
                             <span>
