--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                             minimale Einnahmen.
                             Die bevorzugte Methode der Abrechnung ist deshalb die Abrechnung nach der Verwendungsdauer
                             des Zweirad.
-
+                            Die relevanten Daten wie Startzeitpunkt und der Endzeitpunkt der Endleihe
                         </div>
                     </div>
                     <div class="topic" id="komponente-wartung">
@@ -570,11 +570,7 @@
                             Statuserhebung
                         </div>
                         <div class="content">
-<<<<<<< HEAD
-                            Die Erhebung aller relevanter Informationen für den Betreiber und den Kunden 
-=======
-
->>>>>>> 9b4b2967d63c49255266474dbbd822b32e716c2c
+                            Die Erhebung aller relevanter Informationen für den Betreiber und den Kunden erfolgt über das im Zweirad verbaute LTE-M
                         </div>
                     </div>
                     <div class="topic" id="komponente-stromversorgung">
