--- a/index.html
+++ b/index.html
@@ -570,7 +570,10 @@
                             Statuserhebung
                         </div>
                         <div class="content">
-                            Die Erhebung aller relevanter Informationen für den Betreiber und den Kunden erfolgt über das im Zweirad verbaute LTE-M
+                            Die Erhebung aller relevanter Informationen für den Betreiber und den Kunden erfolgt über das im Zweirad verbaute Funkmodul.
+                            Welche Modell verwendet wird hängt vom Anbieter des Zweirades ab. So werden LTE-M, WPAN und GSM-Module verwendet. 
+                            Wichtig bei den Modulen ist ein geringer Stromverbrauch als auch ein guter Empfang um eśelbst in HHäuserschluchten noch eine
+                            Verbindung zu haben.
                         </div>
                     </div>
                     <div class="topic" id="komponente-stromversorgung">
@@ -578,7 +581,9 @@
                             Stromversorgung
                         </div>
                         <div class="content">
-
+                            Alle Zweiräder verfügen über einen eingebauten Akku, welcher zur Stromversorgung der eingbauten Elektronik
+                            benötigt wird. Es gibt keinen standard Akku und so finden Akkus auf verschiedener Basis Verwendung. 
+                            Verwendet werden
                         </div>
                     </div>
                     <div class="topic" id="komponente-sperrung">
