Autormeinung zum Inhaltsverzeichnis hinzugefügt

--- a/index.html
+++ b/index.html
@@ -206,6 +206,23 @@
                         <a href="index#quellenverzeichnis">
                             Quellen
                         </a>
+                        <ol>
+                            <li>
+                                <a href="index#wissenschaft">
+                                    Wissenschaft
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index#medien">
+                                    Medien
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index#autoren">
+                                    Autoren
+                                </a>
+                            </li>
+                        </ol>
                     </li>
                 </ol>
             </div>
@@ -647,7 +664,7 @@
                         Quellen aus der Wissenschaft, die Medien sowie die Autoren selbst präsentieren verschiedene
                         Kritiken zu und Perspektiven auf Fahrradverleihsysteme.
                     </span>
-                    <div class="topic">
+                    <div class="topic" id="wissenschaft">
                         <div class="title">
                             Wissenschaft
                         </div>
@@ -665,7 +682,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="topic">
+                    <div class="topic" id="medien">
                         <div class="title">
                             Medien
                         </div>
@@ -684,7 +701,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="topic">
+                    <div class="topic" id="autoren">
                         <div class="title">
                             Florian Martins
                         </div>
