--- a/index.html
+++ b/index.html
@@ -583,7 +583,8 @@
                         <div class="content">
                             Alle Zweiräder verfügen über einen eingebauten Akku, welcher zur Stromversorgung der eingbauten Elektronik
                             benötigt wird. Es gibt keinen standard Akku und so finden Akkus auf verschiedener Basis Verwendung. 
-                            Verwendet werden
+                            Verwendet werden unter anderen Nickel-Metallhydrid-, Lithium-Polymer- und Nickel-Cadmium-Akkus. Sie werden
+                            entweder durch einen eingebauten Dynamo oder Ladestationen geladen.
                         </div>
                     </div>
                     <div class="topic" id="komponente-sperrung">
