--- a/index.html
+++ b/index.html
@@ -609,7 +609,10 @@
                             Sperrung / Entriegelung
                         </div>
                         <div class="content">
-
+                            Die reversible Sperrung / Entsperrung findet bei Fahrrädern durch ein elektronisches Schloss statt.
+                            Dabei schiebt ein elektrischer Motor einen Bolzen schwischen die Speichen eines Rades, welches das Fahren
+                            unmöglich macht. Bei Rollern reicht es durch eine Sperrung der Motorsteuerung
+                            die Stromzufuhr zum Motor zu unterbrechen.
                         </div>
                     </div>
                     <div class="topic" id="komponente-neuverteilung">
