--- a/index.html
+++ b/index.html
@@ -620,7 +620,10 @@
                             Neuverteilung
                         </div>
                         <div class="content">
-
+                            Der ursprüngliche Gedanke, dass sich das System durch das Kundenverhalten selbst reguliert funktioniert in der Praxis nur teilweise.
+                            Durch ungleichmäßige Nutzung bilden sich im Verlauf der Zeit Gebiete mit einer zu hohen als auch einer zu niedrigen Dichte
+                            an verfügbaren Zweirädern. Die überschüssigen Zweiräder müssen dann durch die Firma in Form von Mitarbeitern in Lastwagen wieder 
+                            optimal verteilt werden. Reparierte Zweiräder werde so auch wieder der Nutzung hinzugefügt.
                         </div>
                     </div>
                     <div class="topic" id="komponente-entsorgung">
