noch der letzte Part

--- a/index.html
+++ b/index.html
@@ -631,7 +631,10 @@
                             Entsorgung
                         </div>
                         <div class="content">
-
+                            Zweiräder, welche einen zu großen Schade erlitten haben als dass sich eine Reperatur lohnen würde, werden verschrottet.
+                            Falls allerdings Zweiräder, welche noch funktionstüchtig sind nicht mehr benötigt werden, besteht die Möglichkeit 
+                            eines Verkaufes über Zweiradbörsen. Dieser Weg erlaubt es der Firma einen Teil der Anschaffungskosten der nun nicht
+                            mehr benötigen Zweiräder wieder zu erhalten.
                         </div>
                     </div>
                     <div class="topic" id="komponente-verwaltung">
